# smart-c-playground

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .prettierignore  AGENTS.md  Caddyfile  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  compose.apparmor.yaml  compose.prod.yaml  compose.runtime-smoke.yaml  compose.yaml  docker-bake.hcl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/lsp/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/lsp/src/: app.test.ts  app.ts  clangd-process.test.ts  clangd-process.ts  config.test.ts  config.ts  health.ts  index.ts  json-rpc-guard.test.ts  json-rpc-guard.ts  session-manager.test.ts  session-manager.ts  ticket.test.ts  ticket.ts  websocket.test.ts  websocket.ts
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/: request-rate-limit.test.ts
apps/web/app/api/executions/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/lsp/sessions/: route.ts
apps/web/app/internal/health/live/: route.ts
apps/web/app/internal/health/ready/: route.ts
apps/web/components/: code-editor.tsx  interactive-terminal.tsx  playground.tsx
apps/web/lib/client/: api.test.ts  api.ts  lsp-transport.test.ts  lsp-transport.ts  storage.test.ts  storage.ts  websocket.ts
apps/web/lib/server/: http.test.ts  http.ts  identity.ts  rate-limit.test.ts  rate-limit.ts  services.ts  validation.test.ts  validation.ts
apps/web/types/: wire.ts
crates/executor-api/: Cargo.toml  Dockerfile
crates/executor-api/src/: config.rs  grpc.rs  http.rs  lib.rs  main.rs  model.rs  state.rs  ticket.rs
crates/executor-protocol/: Cargo.toml  build.rs
crates/executor-protocol/proto/: executor.proto
crates/executor-protocol/src/: lib.rs
crates/executor-worker/: Cargo.toml  Dockerfile
crates/executor-worker/runtime-support/: stdio.c
crates/executor-worker/src/: backend.rs  client.rs  config.rs  execution.rs  lib.rs  main.rs  smoke.rs
docs/: architecture.md  security.md
infra/apparmor/: smart-c-rootless-sandbox
infra/nsjail/: README.md  compile.cfg  compile.seccomp  runtime.cfg  runtime.seccomp  worker-outer.seccomp.json  worker-outer.seccomp.json.NOTICE
scripts/: install-apparmor-profile.sh  preflight-host.sh  verify-runtime-cleanup.mjs  verify-sandbox.sh
