[workspace]
members = [
    "crates/executor-api",
    "crates/executor-protocol",
    "crates/executor-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "WTFPL"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["http1", "json", "tokio", "ws"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "0.3.31"
hmac = "0.12.1"
http = "1.3.1"
http-body-util = "0.1.3"
portable-pty = "0.9.0"
prost = "0.13.5"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
subtle = "2.6.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
